--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="E:\Kuli\Semester 5\UAS\Final Project RPL\style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,14 +19,14 @@
     		<div class="login-info-box">
     			<h2>Have an account?</h2>
     			<p>Login to your account</p>
-    			<label id="label-register" for="log-reg-show">Login</label>
+    			<label id="label-register" for="log-reg-show">Register</label>
     			<input type="radio" name="active-log-panel" id="log-reg-show" checked="checked">
     		</div>
 
     		<div class="register-info-box">
     			<h2>Don't have an account?</h2>
     			<p>Register Yourself </p>
-    			<label id="label-login" for="log-login-show">Register</label>
+    			<label id="label-login" for="log-login-show">Login</label>
     			<input type="radio" name="active-log-panel" id="log-login-show">
     		</div>
         
