--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
               aria-label="Search">
           </form>
           <div class="flex-shrink-0 dropdown">
-            <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="./images/icon.webp" alt="mdo" width="32" height="32" class="rounded-circle">
-            </a>
+            <a href="./login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
+            
             <ul class="dropdown-menu text-small shadow dropdown-menu-end">
               <li><a class="dropdown-item" href="#">Buat Kursus</a></li>
               <li><a class="dropdown-item" href="#">Profile</a></li>
